- Fixed wxHTML's line breaks handling in <pre> blocks broken in 2.8.8 (#10120).
- wxHTML: don't include extra whitespace in table cells.
- Implemented wxWindow::DragAcceptFiles() on all platforms.
- Added wxAUI_MGR_LIVE_RESIZE flag to wxAuiManager and made it the default on
  wxMac with CoreGraphics where sash drawing isn't implemented.
- Use bitmap mask in wxSplashScreen.

All (Unix):

- Return false from wxSingleInstanceChecker::IsAnotherRunning() if an error
  occurred while opening or reading the lock file (Lauri Nurmi).

wxMSW:

- Fixed bug with using non default encoding in wxTextCtrl in ANSI build.
- Restored generation of events for accelerators when there is no menu bar.
- Fixed wxArtProvider::GetSizeHint() to return 16x16 for wxART_FRAME_ICON.
- Fixed toolbar buttons so that they don't disappear temporarily when clicked
  if the event handler causes window update.
- Fix display enumeration under WinCE (Vince Harron).
- Fix best size calculation for wxNotebook with multiple rows (Alex McCarthy).
- Correct coordinates of wxDropFilesEvent (Dmitriy Maksimov).
- Fix handling of abandoned mutexes in wxMutex (David Heffernan).
- Avoid warnings about deprecated localtime with MSVC8/9 (Chris Stankevitz).
- Fixed invisible CHM tooltip text bug when window text colour is black.
- Automatically adjust toolbar's tool size if the provided bitmaps
  don't fit into the default size.


wxMSW/CE:

- Don't hardcode the menu bar height (Michele Spighi).

wxGTK:

- Fixed printing to use fonts sizes adjustment consistent with wxMSW.
- Make colours used by list, tree and status bar controls more consistent with
  the system theme settings (Tim Kosse).
- Worked around bug in GTK+ < 2.14 where enabling some controls such
  as wxButton didn't re-enable sensitivity until the mouse was moved.

2.8.9
-----

All:

- Optimize wxString::Replace() for single character arguments.
- Updated Hindi translation (Priyank Bolia).